# orpheus-onnx-rs

./: .env  .gitignore  Cargo.toml  README.md  config.toml
config/: common.toml  orpheus-de.toml  orpheus-en.toml  orpheus-fr.toml  orpheus-hi.toml  orpheus-it-es.toml  orpheus-ko.toml  orpheus-zh.toml
src/: audio_frame.rs  config.rs  main.rs  snac_processor.rs  token_generator.rs
src/handler/: mod.rs  oneshot.rs
src/handler/batch/: upload.rs
src/media/: mod.rs  wav.rs
src/processing/: audio_frame.rs  mod.rs  snac_processor.rs  token_generator.rs
