[package]
name = "orpheus-onnx-rust-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"

# Web framework
axum = { version = "0.8.4", features = ["multipart"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }

# HTTP client
reqwest = { version = "0.12.19", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10"

# Machine learning
ort = { version = "1.16.3", default-features = false }
ndarray = "0.15.6"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
regex = "1.11"
uuid = { version = "1.17", features = ["v4"] }
